--- a/Topic Modelling and Sentiment Analysis/Test 2 Revision/P6B Summary.ipynb
+++ b/Topic Modelling and Sentiment Analysis/Test 2 Revision/P6B Summary.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Libraries to import\n",
+    "**Libraries to import**\n",
     "```Python\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -216,7 +216,7 @@
     "y_pred = classifier.predict(X_test)\n",
     "print(\"Accuracy Score: \" + str(accuracy_score(y_test, y_pred)))\n",
     "```\n",
-    "Print Confusion Matrix\n",
+    "*Print Confusion Matrix*\n",
     "```Python\n",
     "# Function to create a confusion matrix \n",
     "def conf_matrix(y_test, pred_test):    \n",
