--- a/Topic Modelling and Sentiment Analysis/Test 2 Revision/P7B Summary.ipynb
+++ b/Topic Modelling and Sentiment Analysis/Test 2 Revision/P7B Summary.ipynb
@@ -18,11 +18,10 @@
     "\n",
     "import gensim\n",
     "from gensim import corpora\n",
-    "\n",
     "import string\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -146,7 +145,7 @@
     "    dic_topic_doc.setdefault(top_item[0],[]).append((filenames[index],top_item[1]))\n",
     "```\n",
     "\n",
-    "Part 2: Making use of the above information, and transform to extract list of topic id, number of files (belong to topic) and list of file names with probability \n",
+    "- Part 2: Making use of the above information, and transform to extract list of topic id, number of files (belong to topic) and list of file names with probability \n",
     "```Python\n",
     "#print out identified topic id and associated\n",
     "print('\\nTopic id, number of documents, list of documents with probability and represented topic words:')\n",
@@ -163,23 +162,14 @@
    "id": "8f9d649f-7abe-455c-9b13-979fc6245765",
    "metadata": {},
    "source": [
-    "The interpretation of the result, based on the below output:\n",
+    "The interpretation of the result, based on the below output:  \n",
     "\n",
-    "0 13 [('206.txt', 0.99757373), ('112.txt', 0.99581325), ('221 .txt', 0.99573374) … <br />\n",
+    "> 0 13 [('206.txt', 0.99757373), ('112.txt', 0.99581325), ('221 .txt', 0.99573374) … <br />\n",
     "0.005*\"said\" + 0.005*\"network\" + 0.005*\"business\" + 0.004*\"uk\" + 0.004*\"could\"<br />\n",
-    "1 28 [('111.txt', 0.9982385), ('245.txt', 0.9976861), ('127.txt', 0.9975066),….<br />\n",
-    "0.007*\"people\" + 0.007*\"would\" + 0.006*\"said\" + 0.005*\"blair\" + 0.005*\"party\"\n",
     "\n",
     "means that topic id 0 has 13 files identified and 206.txt is assigned with the highest probability, followed by 112.txt and so on. Python starts its index with 0 but essentially, topic id 0 is the first topic identified.\n",
     "\n",
-    "Similarly, the next is topic id 1 with 28 files identified and 111.txt is assigned with the highest probability, followed by 245.txt and so on.\n",
-    "\n",
-    "\n",
-    "**Visualize Topics and Keywords**\n",
-    "\n",
-    "Now, we are ready to visualize our LDA model.\n",
-    "\n",
-    "The following code uses the pyLDAvis tool to visualize the fit of your LDA model across topics and their top words.\n",
+    "**Visualize Topics and Keywords**: using pyLDAvis to visualise fit of model across topics and top words\n",
     "> pip install pyLDAvis\n",
     "```Python\n",
     "# plotting tools\n",
