--- a/Topic Modelling and Sentiment Analysis/Test 2 Revision/P7b Topic Modelling-Solution - Copy.ipynb
+++ b/Topic Modelling and Sentiment Analysis/Test 2 Revision/P7b Topic Modelling-Solution - Copy.ipynb
@@ -61,86 +61,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting gensim\n",
-      "  Using cached gensim-4.3.3-cp311-cp311-macosx_11_0_arm64.whl.metadata (8.1 kB)\n",
-      "Collecting numpy<2.0,>=1.18.5 (from gensim)\n",
-      "  Using cached numpy-1.26.4-cp311-cp311-macosx_11_0_arm64.whl.metadata (114 kB)\n",
-      "Collecting scipy<1.14.0,>=1.7.0 (from gensim)\n",
-      "  Using cached scipy-1.13.1-cp311-cp311-macosx_12_0_arm64.whl.metadata (60 kB)\n",
-      "Collecting smart-open>=1.8.1 (from gensim)\n",
-      "  Using cached smart_open-7.0.5-py3-none-any.whl.metadata (24 kB)\n",
-      "Collecting wrapt (from smart-open>=1.8.1->gensim)\n",
-      "  Using cached wrapt-1.17.0-cp311-cp311-macosx_11_0_arm64.whl.metadata (6.4 kB)\n",
-      "Using cached gensim-4.3.3-cp311-cp311-macosx_11_0_arm64.whl (24.0 MB)\n",
-      "Using cached numpy-1.26.4-cp311-cp311-macosx_11_0_arm64.whl (14.0 MB)\n",
-      "Using cached scipy-1.13.1-cp311-cp311-macosx_12_0_arm64.whl (30.3 MB)\n",
-      "Using cached smart_open-7.0.5-py3-none-any.whl (61 kB)\n",
-      "Using cached wrapt-1.17.0-cp311-cp311-macosx_11_0_arm64.whl (38 kB)\n",
-      "Installing collected packages: wrapt, numpy, smart-open, scipy, gensim\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "textnets 0.9.4 requires pandas<3.0.0,>=2.1.1, which is not installed.\n",
-      "textnets 0.9.4 requires spacy<4.0.0,>=3.7.2, which is not installed.\n",
-      "textnets 0.9.4 requires toolz<0.13.0,>=0.12.0, which is not installed.\n",
-      "textnets 0.9.4 requires tqdm<5.0.0,>=4.64.1, which is not installed.\n",
-      "textnets 0.9.4 requires wasabi<2.0.0,>=1.1.2, which is not installed.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed gensim-4.3.3 numpy-1.26.4 scipy-1.13.1 smart-open-7.0.5 wrapt-1.17.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install gensim"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting nltk\n",
-      "  Using cached nltk-3.9.1-py3-none-any.whl.metadata (2.9 kB)\n",
-      "Collecting click (from nltk)\n",
-      "  Using cached click-8.1.7-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Collecting joblib (from nltk)\n",
-      "  Using cached joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Collecting regex>=2021.8.3 (from nltk)\n",
-      "  Using cached regex-2024.11.6-cp311-cp311-macosx_11_0_arm64.whl.metadata (40 kB)\n",
-      "Collecting tqdm (from nltk)\n",
-      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
-      "Using cached nltk-3.9.1-py3-none-any.whl (1.5 MB)\n",
-      "Using cached regex-2024.11.6-cp311-cp311-macosx_11_0_arm64.whl (284 kB)\n",
-      "Using cached click-8.1.7-py3-none-any.whl (97 kB)\n",
-      "Using cached joblib-1.4.2-py3-none-any.whl (301 kB)\n",
-      "Downloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
-      "Installing collected packages: tqdm, regex, joblib, click, nltk\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "textnets 0.9.4 requires pandas<3.0.0,>=2.1.1, which is not installed.\n",
-      "textnets 0.9.4 requires spacy<4.0.0,>=3.7.2, which is not installed.\n",
-      "textnets 0.9.4 requires toolz<0.13.0,>=0.12.0, which is not installed.\n",
-      "textnets 0.9.4 requires wasabi<2.0.0,>=1.1.2, which is not installed.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed click-8.1.7 joblib-1.4.2 nltk-3.9.1 regex-2024.11.6 tqdm-4.67.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install nltk"
+    "# pip install gensim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -818,7 +757,7 @@
        " 'Nintendo adds media playing to DS\\n\\nNintendo is releasing an adapter for its DS handheld console so it can play music and video.\\n\\nThe add-on for the DS means people can download TV programmes, film clips or MP3 files to the adaptor and then play them back while on the move. The release of the media add-on is an attempt by the Japanese games giant to protect its dominance of the handheld gaming market. Nintendo said the media adapter will be available from February in Japan.\\n\\nThe Nintendo DS is the successor to the hugely successful GameBoy handheld game console and went on sale in Japan on 2 December. The DS has two screens, one of which is touch sensitive, and also has on-board a short-range wireless link that lets people play against each other.\\n\\nThe launch of the media adapter, and the attempt to broaden the appeal of the device, is widely seen as a response to the unveiling of the Sony PSP which was built as a multi-purpose media player and game gadget from the start. Sony is thought to be preparing pre-packaged movies and music for the PSP. The add-on will also work with the GameBoy Advance SP. Nintendo dominates the handheld gaming console world thanks to successive versions of the GameBoy. More than 28 million GameBoy Advance handhelds have been sold around the world. The dual-screen DS is also thought to be selling well with more than 2.5 million expected to be sold by the end of 2004. Nintendo said it had no plans to sell the media adapter outside Japan. When it goes on sale the adapter is expected to cost about 5000 yen (Â£25), roughly the difference in price between the DS and the higher-priced Sony PSP.\\n']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53441,34 +53380,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [
@@ -78210,9 +78121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'corpora' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dictionary \u001b[38;5;241m=\u001b[39m corpora\u001b[38;5;241m.\u001b[39mDictionary(corpus_text)\n\u001b[1;32m      2\u001b[0m doc_term_matrix \u001b[38;5;241m=\u001b[39m [dictionary\u001b[38;5;241m.\u001b[39mdoc2bow(doc) \u001b[38;5;28;01mfor\u001b[39;00m doc \u001b[38;5;129;01min\u001b[39;00m corpus_text]\n\u001b[1;32m      3\u001b[0m doc_term_matrix\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'corpora' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dictionary = corpora.Dictionary(corpus_text)\n",
     "doc_term_matrix = [dictionary.doc2bow(doc) for doc in corpus_text]"
@@ -78254,20 +78177,6 @@
     "\n",
     "pprint(ldamodel.print_topics(num_topics=topic_num, num_words=word_num))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
