--- a/xinyu.ipynb
+++ b/xinyu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -497,43 +497,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NGUYEN NGOC PHUONG LAN</td>\n",
-       "      <td>81803847</td>\n",
+       "      <td>TAN KAI SHEN</td>\n",
+       "      <td>98322286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AAKASH RAMAKRISHNA</td>\n",
-       "      <td>98272565</td>\n",
+       "      <td>TAN JIONG'EN BENJAMIN</td>\n",
+       "      <td>88872501</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>WONG CHIN YEE</td>\n",
-       "      <td>96182651</td>\n",
+       "      <td>MARDANE PARNIKA ANKUR</td>\n",
+       "      <td>91786313</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MOHAMED SALIM BIN ALI</td>\n",
-       "      <td>94241424</td>\n",
+       "      <td>LEONG SONG HUI</td>\n",
+       "      <td>87160301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>LIM JIA YING</td>\n",
-       "      <td>98799774</td>\n",
+       "      <td>LOVAN DEOVINO</td>\n",
+       "      <td>98950922</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     Name Mobile Number\n",
-       "0  NGUYEN NGOC PHUONG LAN      81803847\n",
-       "1      AAKASH RAMAKRISHNA      98272565\n",
-       "2           WONG CHIN YEE      96182651\n",
-       "3   MOHAMED SALIM BIN ALI      94241424\n",
-       "4            LIM JIA YING      98799774"
+       "                    Name  Mobile Number\n",
+       "0           TAN KAI SHEN       98322286\n",
+       "1  TAN JIONG'EN BENJAMIN       88872501\n",
+       "2  MARDANE PARNIKA ANKUR       91786313\n",
+       "3         LEONG SONG HUI       87160301\n",
+       "4          LOVAN DEOVINO       98950922"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,37 +545,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "phonenumber:+6581803847 sent\n",
-      "phonenumber:+6598272565 sent\n",
-      "phonenumber:+6596182651 sent\n",
-      "phonenumber:+6594241424 sent\n",
-      "phonenumber:+6598799774 sent\n",
-      "phonenumber:+6589339196 sent\n",
       "phonenumber:+6598322286 sent\n",
       "phonenumber:+6588872501 sent\n",
       "phonenumber:+6591786313 sent\n",
       "phonenumber:+6587160301 sent\n",
       "phonenumber:+6598950922 sent\n",
-      "phonenumber:+6594792436 sent\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 16\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(tshirt)): \n\u001b[1;32m     15\u001b[0m     phone_number\u001b[38;5;241m=\u001b[39mcountrycode\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(phone[i])\n\u001b[0;32m---> 16\u001b[0m     kit\u001b[38;5;241m.\u001b[39msendwhatmsg_instantly(phone_number, message,\u001b[38;5;241m30\u001b[39m,\u001b[38;5;28;01mTrue\u001b[39;00m,\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mphonenumber:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mphone_number\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m sent\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pywhatkit/whats.py:31\u001b[0m, in \u001b[0;36msendwhatmsg_instantly\u001b[0;34m(phone_no, message, wait_time, tab_close, close_time)\u001b[0m\n\u001b[1;32m     29\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     30\u001b[0m pg\u001b[38;5;241m.\u001b[39mclick(core\u001b[38;5;241m.\u001b[39mWIDTH \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m, core\u001b[38;5;241m.\u001b[39mHEIGHT \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m---> 31\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(wait_time \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     32\u001b[0m pg\u001b[38;5;241m.\u001b[39mpress(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124menter\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     33\u001b[0m log\u001b[38;5;241m.\u001b[39mlog_message(_time\u001b[38;5;241m=\u001b[39mtime\u001b[38;5;241m.\u001b[39mlocaltime(), receiver\u001b[38;5;241m=\u001b[39mphone_no, message\u001b[38;5;241m=\u001b[39mmessage)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "phonenumber:+6594792436 sent\n",
+      "phonenumber:+6592349871 sent\n",
+      "phonenumber:+6589288251 sent\n"
      ]
     }
    ],
