--- a/Natural Language Processing/Assignment/part3.ipynb
+++ b/Natural Language Processing/Assignment/part3.ipynb
@@ -42,6 +42,31 @@
    "source": [
     "testset['naive_bayes_pred']=(nb.predict(vector))[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(df): \n",
+    "    # Calculate True Positives (TP): cases where prediction matches the actual species\n",
+    "    correct_predictions = df['species'] == df['naive_bayes_pred']\n",
+    "    tp = correct_predictions.sum()\n",
+    "    \n",
+    "    # Calculate total records\n",
+    "    total_records = len(df)\n",
+    "    \n",
+    "    # Calculate accuracy\n",
+    "    accuracy = tp / total_records if total_records > 0 else 0\n",
+    "    \n",
+    "    # Calculate False Positives (FP): cases where the prediction is wrong\n",
+    "    false_positives = (~correct_predictions).sum()\n",
+    "    \n",
+    "    return accuracy\n",
+    "    \n",
+    "accuracy(testset)"
+   ]
   }
  ],
  "metadata": {
