--- a/Topic Modelling and Sentiment Analysis/Test 2 Revision/Test Summary.ipynb
+++ b/Topic Modelling and Sentiment Analysis/Test 2 Revision/Test Summary.ipynb
@@ -71,6 +71,7 @@
     "```Python\n",
     "from nltk.probability import FreqDist\n",
     "import matplotlib.pyplot as plt\n",
+    "from wordcloud import WordCloud\n",
     "reviews=hotel_reviews['Review'].tolist() #convert dataframe columns to list\n",
     "freq_dist=FreqDist(reviews_cleaned) #calculate frequency of words that should be a list\n",
     "freq_dist.plot(50, cumulative=False) #generate freq distribution plot \n",
