--- a/Natural Language Processing/Assignment/IT2391_230436M_Part2.ipynb
+++ b/Natural Language Processing/Assignment/IT2391_230436M_Part2.ipynb
@@ -11,17 +11,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "b4a4a8b6-5f8f-4738-8635-a1a3c0c20d81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in c:\\users\\wongw\\anaconda3\\lib\\site-packages (1.3.0)\n",
+      "Collecting seaborn\n",
+      "  Using cached seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from scikit-learn) (1.24.3)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from scikit-learn) (1.10.1)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from scikit-learn) (3.5.0)\n",
+      "Requirement already satisfied: pandas>=1.2 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from seaborn) (2.0.3)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from seaborn) (3.7.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.0.5)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.51.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (10.4.0)\n",
+      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (6.4.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from pandas>=1.2->seaborn) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from pandas>=1.2->seaborn) (2023.3)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib!=3.6.1,>=3.4->seaborn) (3.20.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\wongw\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
+      "Using cached seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
+      "Installing collected packages: seaborn\n",
+      "Successfully installed seaborn-0.13.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#pip install scikit-learn"
+    "pip install scikit-learn seaborn "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "b66650e8-efd8-474d-9ff0-1e2b03d0b7c0",
    "metadata": {},
    "outputs": [],
@@ -46,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "423b828b-21ec-487c-955f-bc16282d2fa1",
    "metadata": {},
    "outputs": [
@@ -85,7 +118,7 @@
        "      <td>2 Jun 2023 ï¿½ The Javan myna shares some simi...</td>\n",
        "      <td>Javan Myna</td>\n",
        "      <td>162</td>\n",
-       "      <td>junthe javan myna shares some similarities wi...</td>\n",
+       "      <td>jun javan myna share similar common myna term ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -93,7 +126,7 @@
        "      <td>Click here for more information about the Red ...</td>\n",
        "      <td>Collared Kingfisher</td>\n",
        "      <td>398</td>\n",
-       "      <td>click here for more information about the red ...</td>\n",
+       "      <td>click inform red list categori criteria justif...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -101,7 +134,7 @@
        "      <td>The black-headed oriole ( Oriolus larvatus) is...</td>\n",
        "      <td>Black-naped Oriole</td>\n",
        "      <td>349</td>\n",
-       "      <td>the blackheaded orioleoriolus larvatus is a sp...</td>\n",
+       "      <td>black head oriol oriolu larvatu speci bird fam...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -109,7 +142,7 @@
        "      <td>Search from thousands of royalty-free \"Javan M...</td>\n",
        "      <td>Javan Myna</td>\n",
        "      <td>177</td>\n",
-       "      <td>search from thousands of royaltyfree javan myn...</td>\n",
+       "      <td>search thousand royalti free javan myna stock ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -117,7 +150,7 @@
        "      <td>521 foreground recordings and 156 background ...</td>\n",
        "      <td>Little Egret</td>\n",
        "      <td>112</td>\n",
-       "      <td>foreground recordings andbackground recordings...</td>\n",
+       "      <td>foreground record background record egretta ga...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -139,14 +172,14 @@
        "4         Little Egret          112   \n",
        "\n",
        "                                        cleaned_text  \n",
-       "0   junthe javan myna shares some similarities wi...  \n",
-       "1  click here for more information about the red ...  \n",
-       "2  the blackheaded orioleoriolus larvatus is a sp...  \n",
-       "3  search from thousands of royaltyfree javan myn...  \n",
-       "4  foreground recordings andbackground recordings...  "
+       "0  jun javan myna share similar common myna term ...  \n",
+       "1  click inform red list categori criteria justif...  \n",
+       "2  black head oriol oriolu larvatu speci bird fam...  \n",
+       "3  search thousand royalti free javan myna stock ...  \n",
+       "4  foreground record background record egretta ga...  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "821a759f-6991-4a30-a227-9f93c7cb668a",
    "metadata": {},
    "outputs": [],
@@ -169,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "9bd93c00-856f-44a7-b16d-a248e12c64f3",
    "metadata": {},
    "outputs": [
@@ -212,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "6fa89483",
    "metadata": {},
    "outputs": [
@@ -221,18 +254,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "training: (488, 10330)\n",
-      "test: (123, 10330)\n",
+      "training: (488, 2493)\n",
+      "test: (123, 2493)\n",
       "\n",
-      "features: ['abilities' 'ability' 'able' ... 'zhao renhui' 'zoonoses'\n",
-      " 'zoonoses singapore']\n",
+      "features: ['abil' 'abl' 'abstract' ... 'zestim' 'zhao' 'zoonos']\n",
       "      \n"
      ]
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "cv=CountVectorizer(stop_words='english', ngram_range=(1,2))\n",
+    "cv=CountVectorizer(stop_words='english', ngram_range=(1,1))\n",
     "X_train_cv=cv.fit_transform(X_train)\n",
     "X_test_cv=cv.transform(X_test) #make sure X_test is TRANSFORM and not fit_transform\n",
     "\n",
@@ -246,6 +278,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "324187cc-3be2-4ce5-8cb4-57c07f75619d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "training: (488, 2493)\n",
+      "test: (123, 2493)\n",
+      "\n",
+      "features: ['abil' 'abl' 'abstract' ... 'zestim' 'zhao' 'zoonos']\n",
+      "      \n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "tv=TfidfVectorizer(stop_words='english', ngram_range=(1,1))\n",
+    "X_train_tv=tv.fit_transform(X_train)\n",
+    "X_test_tv=tv.transform(X_test) #make sure X_test is TRANSFORM and not fit_transform\n",
+    "\n",
+    "#print dimensions and features \n",
+    "print(f\"\"\"\n",
+    "training: {X_train_tv.toarray().shape}\n",
+    "test: {X_test_tv.toarray().shape}\n",
+    "\n",
+    "features: {tv.get_feature_names_out()}\n",
+    "      \"\"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2d891413",
    "metadata": {},
@@ -255,12 +321,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "850effb5",
+   "cell_type": "markdown",
+   "id": "b6e2ad88-368a-40fa-9551-6c9e2408e3d8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## from sklearn.linear_model import LogisticRegression\n",
+    "lr=LogisticRegression(solver='lbfgs')\n",
+    "\n",
+    "#train\n",
+    "def vectorise_data(X_train_cv,X_test_cv):\n",
+    "    lr.fit(X_train_cv, y_train)\n",
+    "    y_pred_cv=lr.predict(X_test_cv)\n",
+    "    accuracy=accuracy_score(y_test, y_pred_cv)\n",
+    "    return accuracy\n",
+    "\n",
+    "print(f'''\n",
+    "Model: Count Vectorizer\n",
+    "Accuracy: {vectorise_data(X_train_cv, X_test_cv)} \n",
+    "=================================================================================================\n",
+    "\n",
+    "Model: Tfidf Vectorizer\n",
+    "Accuracy: {vectorise_data(X_train_tv, X_test_cv)}\n",
+    "''')\n"
+   ]
   },
   {
    "attachments": {},
@@ -278,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "b185da73",
    "metadata": {},
    "outputs": [],
@@ -318,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "a245f95b",
    "metadata": {},
    "outputs": [
@@ -709,7 +792,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -723,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
