--- a/Natural Language Processing/Assignment/part3.ipynb
+++ b/Natural Language Processing/Assignment/part3.ipynb
@@ -1,28 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting openpyxlNote: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "  Using cached openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
-      "Collecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
-      "Using cached openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
-      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n"
-     ]
-    }
-   ],
    "source": [
-    "pip install openpyxl"
+    "Done By: Wong Wen Bing 230436M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install openpyxl pandas "
    ]
   },
   {
@@ -250,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
